--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "photos",
-  "version": "0.1.0",
+  "version": "1.1.0",
+  "engines": {
+    "node": "17.8.0"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
